<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trouble_signing_in"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:id="@+id/forgot_password"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:id="@+id/single_sign_on"
                android:text="@string/single_sign_on"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:id="@+id/send_email"
                android:text="@string/email_me_a_sign_in_link"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:id="@+id/sign_in_apple"
                android:text="@string/sign_in_with_apple_id"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>