<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/header_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/back_5"
            android:contentDescription="@string/log_in_to_dropbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/log_in_to_dropbox"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_margin="@dimen/layout_margin"
            android:padding="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/gray" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_toggle"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_margin="@dimen/layout_margin"
            android:padding="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/gray" />


        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <FrameLayout
            android:id="@+id/login_with_apple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/coconut"
            android:padding="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:background="@color/coconut"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/log_in_with_google"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/graphite"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/having_trouble_logging_in"
            android:id="@+id/logging_in_trouble"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_gravity="center"
            android:textColor="@color/dropbox_blue"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>
