<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="vn.edu.usth.dropboxui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_my_files"
        android:name="vn.edu.usth.dropboxui.ui.myfile.MyFileFragment"
        android:label="@string/title_my_files"
        tools:layout="@layout/fragment_my_file" >
        <action
            android:id="@+id/action_navigation_my_files_to_storageFragment2"
            app:destination="@id/storageFragment" />
    </fragment>
    <fragment
        android:id="@+id/storageFragment"
        android:name="vn.edu.usth.dropboxui.ui.myfile.StorageFragment"
        android:label="@string/title_storage"
        tools:layout="@layout/fragment_storage" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="vn.edu.usth.dropboxui.ui.user.UserFragment"
        android:label="User"
        tools:layout="@layout/fragment_user" />
    <activity
        android:id="@+id/loginActivity"
        android:name="vn.edu.usth.dropboxui.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/signInActivity"
        android:name="vn.edu.usth.dropboxui.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in" />
    <activity
        android:id="@+id/mainActivity"
        android:name="vn.edu.usth.dropboxui.MainActivity"
        android:label="fragment_my_file"
        tools:layout="@layout/fragment_my_file" />

</navigation>