<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="245dp"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="60dp"
            android:src="@drawable/dropbox_login"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/login_with_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/coconut"
                android:layout_margin="@dimen/layout_margin"
                android:padding="10dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/coconut"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/ic_google"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textStyle="bold"
                    android:textColor="@color/graphite"
                    android:text="@string/sign_in_with_google"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/login_with_apple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@color/coconut"
                android:padding="10dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:background="@color/coconut"
                    android:src="@drawable/ic_apple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in_with_apple"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/graphite"
                    android:textStyle="bold" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/already_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/dropbox_blue"
                android:layout_marginStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:id="@+id/sign_in"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
